<resources>
    <string name="app_name">Planner</string>
    <string name="mainToolbarTitle">Tasks</string>
    <string name="settingsToolbarTitle">Settings</string>
    <string name="settingsNavMenuTitle">Settings</string>
    <string name="tasksNavMenuTitle">Tasks</string>
    <string name="menuNavMenuTitle">Menu</string>
    <string name="textTabAllTasks">All</string>
    <string name="textTabFavoriteTasks">Favorites</string>
    <string name="addTaskToolbarTitle">Add Task</string>
    <string name="editTaskToolbarTitle">Edit Task</string>
    <string name="taskAddTitle">Title</string>
    <string name="taskAddDescription">Description</string>
    <string name="taskMenuEdit">Edit Task</string>
    <string name="taskMenuRemove">Remove Task</string>
    <string name="taskMenuAddFavorite">Add to Favorite</string>
    <string name="taskMenuRemoveFavorite">Remove from Favorite</string>
    <string name="taskMenuDone">Done</string>
    <string name="taskMenuUndone">Undone</string>
    <string name="prefStorageTitle">Storage</string>
    <string name="prefStorageShared">Shared preferences</string>
    <string name="prefStorageInternal">Internal storage</string>
    <string name="prefStorageExternal">External storage</string>
    <string name="prefStorageDatabase">Database</string>
    <string name="prefStorageCache">Cache</string>
    <string name="prefDatabaseSummary">Store all tasks in SQL</string>
    <string name="prefExternalSummary">Store all tasks in external file</string>
    <string name="prefInternalSummary">Store all tasks in internal file</string>
    <string name="prefSharedSummary">Store all tasks in shared preferences</string>
    <string name="prefCacheSummary">Store all tasks in cache. Clean after reload app.</string>
    <string name="error_external_permission">External storage cannot be used without permission. Selected shared preferences storage.</string>
    <string name="addTaskErrorEmpty">Title empty</string>
    <string name="prefFirebase">Internet</string>
    <string name="prefFirebaseSummary">Store all tasks in cloud</string>
    <string name="notificationTitleAdd">Added new task</string>
    <string name="notificationTitleEdit">Edited task</string>
    <string name="notificationTitleRemove">Remove task</string>
    <string name="notificationDescriptionMore">Click for details</string>
    <string name="notificationDescriptionClose">Click for remove notification</string>
    <string name="networkErrorReload">Network error. Selected database storage.</string>
    <string name="networkErrorBack">Network error. Back to main screen.</string>
    <string name="networkErrorSimple">Network error. Try later.</string>
    <string name="SaveButton">save</string>
</resources>
